# cship

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cship.toml  install.ps1  install.sh
.github/workflows/: release.yml
docs/: configuration.md  faq.md  index.md  showcase.md
docs/.vitepress/theme/: index.css
scripts/: calibrate_impact.py
src/: account.rs  ansi.rs  cache.rs  config.rs  context.rs  explain.rs  git.rs  lib.rs  sample_context.json  usage_limits.rs
src/modules/: account.rs  context_bar.rs  cost.rs  effort.rs  impact.rs  mod.rs  usage_limits.rs
tests/: cli.rs
tests/fixtures/: effort_basic.toml  effort_disabled.toml  effort_level_subfield.toml  effort_per_level.toml  effort_styled.toml  sample_input_full.json
